[gd_scene load_steps=5 format=3 uid="uid://jstsmmnwjysf"]

[ext_resource type="Script" path="res://Scripts/StorageArea.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://cnmunkksy325u" path="res://Assets/StorageSprite.png" id="2"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(2, 2)

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(4, 4)

[node name="StorageArea" type="CharacterBody2D"]
collision_layer = 128
script = ExtResource("1")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25)
texture = ExtResource("2")
region_enabled = true
region_rect = Rect2(0, 0, 32, 32)

[node name="NodeHolder" type="Node2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(8, 8)
layout_mode = 3
anchors_preset = 0
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0

[node name="MoveStorageButton" type="TouchScreenButton" parent="."]
position = Vector2(-4, -4)
shape = SubResource("2")

[connection signal="pressed" from="MoveStorageButton" to="." method="_on_MoveStorageButton_pressed"]
[connection signal="released" from="MoveStorageButton" to="." method="_on_MoveStorageButton_released"]
